# CloakBrowser-Manager

.claude/skills/cloak-cli-automation/: SKILL.md
.claude/skills/cloak-cli-batch/: SKILL.md
.claude/skills/cloak-cli-profiles/: SKILL.md
.superpowers/sdd/: progress.md
CloakCLI/: README.md  pyproject.toml
CloakCLI/cloakcli/: __init__.py  client.py  config.py  errors.py  models.py  utils.py
CloakCLI/cloakcli/cmd/: browser.py  clipboard.py  config_cmd.py  main.py  profile.py
CloakCLI/cloakcli/cmd/run/: __init__.py
CloakCLI/examples/: basic_usage.py  cli_workflow.sh
CloakCLI/tests/: smoke_test.sh  test_cli.py  test_client.py  test_config.py  test_integration.py  test_models.py  test_run_api.py  test_utils.py
docs/superpowers/plans/: 2026-06-20-cloak-cli.md  2026-06-21-cloak-cli-skills.md
docs/superpowers/specs/: 2026-06-20-cloak-cli-design.md  2026-06-21-cloak-cli-skills-design.md
openspec/changes/archive/2026-06-20-cloak-cli/: design.md  tasks.md
openspec/changes/cloak-cli/: proposal.md  tasks.md
openspec/changes/cloak-cli/specs/manager-sdk/: spec.md
openspec/specs/browser-automation/: spec.md
openspec/specs/cli-configuration/: spec.md
